# AIStreamSocket

./: .gitignore  .replit  README.md  app.py  database.py  empty_model_001.json  main.py  models.py  monkey.py  openai_assistant.py  pyproject.toml  replit.nix  session_evaluator.py  test_interview.py  test_results_test_1681ba35.json  test_results_test_42e6eee2.json  test_results_test_525827cd.json  test_results_test_d9b80672.json  thread_manager.py  websocket_handler.py
attached_assets/: Pasted--core-values-and-priorities-definition-attributes-personal-values-1739839326599.txt  Pasted--workspace-git-log-commit-95ca262bf60a3dde73afb16387c12dd5f3c93b69-HEAD-main-Author-William--1739579215426.txt  Pasted-I-need-to-update-my-existing-Flask-server-that-interacts-with-OpenAI-s-Assistants-API-Chang-1739573069820.txt  Pasted-import-os-import-logging-import-json-from-openai-import-OpenAI-from-models-import-InterviewData-Mes-1739574614100.txt
templates/: conversations.html  evaluation_results.html  index.html
