[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-sockets>=0.2.1",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gevent>=24.11.1",
    "gevent-websocket>=0.10.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "openai>=1.63.0",
    "flask-cors>=5.0.0",
    "trafilatura>=2.0.0",
    "flask-sse>=1.0.0",
    "redis>=5.2.1",
]
